{
    "name": "GameControls",
    "maps": [
        {
            "name": "Game",
            "id": "ae4ddeac-007c-40f5-b912-028485f4d67e",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "070ed55b-77ed-4d9d-96cd-31fbc11fb465",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseAction",
                    "type": "Button",
                    "id": "6fa50ced-e8e5-458b-b35c-5e540cee8cb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76bd99af-ff8c-4119-aa1c-f2f63a56109b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99e28b30-5a24-40fd-bd5d-b3bbc96de591",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}